Another round of fix for notebooks

--- a/sentence_splitter/colabs/sentence_splitter_discriminative_training.ipynb
+++ b/sentence_splitter/colabs/sentence_splitter_discriminative_training.ipynb
@@ -5,9 +5,21 @@
    "id": "3ab06da8",
    "metadata": {},
    "source": [
-    "# Sentence splitter using an embedding model\n",
+    "# Sentence Splitter: Training\n",
     "\n",
-    "Install the required libraries in your virtual environment:"
+    "## Embedding Models Fine-Tuning\n",
+    "\n",
+    "In this notebook, we're going to fine-tune different (actually 6) embedding models for sentence splitting,\n",
+    "using the train and the validation sets provided by the homework assignment."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7769ceb5",
+   "metadata": {},
+   "source": [
+    "Install the libraries in the local virtual environment. \n",
+    "We use specific versions to enforce reproducibility for this notebook."
    ]
   },
   {
@@ -18,7 +30,7 @@
    "outputs": [],
    "source": [
     "!pip install --upgrade pip\n",
-    "!pip install torch numpy pandas datasets jupyter transformers[torch] evaluate"
+    "!pip install torch==2.7.0 numpy==2.3.2 pandas==2.3.2 datasets==3.6.0 jupyter==1.1.1 transformers[torch]==4.56.1 evaluate==0.4.5"
    ]
   },
   {
@@ -26,8 +38,7 @@
    "id": "7ffd513f",
    "metadata": {},
    "source": [
-    "Import all required libraries.\n",
-    "\n",
+    "Import all required libraries for the training. \n",
     "We do this first to fail fast in case additional packages need to be installed in the virtual environment."
    ]
   },
@@ -57,9 +68,9 @@
    "id": "b6713e6e",
    "metadata": {},
    "source": [
-    "Verify that a hardware accelerator is available.\n",
+    "Optionally (not required to run the notebook). If you want to push the fine-tuned model to the registry, you need to set the token.\n",
     "\n",
-    "This notebook requires a GPU."
+    "Verify that a hardware accelerator is available. This notebook requires a GPU."
    ]
   },
   {
@@ -69,7 +80,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "os.environ['HF_TOKEN'] = 'PUT_YOUR_TOKEN_HERE'\n",
+    "# os.environ['HF_TOKEN'] = 'PUT_YOUR_TOKEN_HERE'\n",
+    "\n",
     "torch.cuda.is_available()"
    ]
   },
@@ -78,7 +90,7 @@
    "id": "839d5b93",
    "metadata": {},
    "source": [
-    "Before proceeding, make the run as deterministic as possible:"
+    "Set up deterministic behavior for reproducible results by configuring random seeds for all relevant libraries:"
    ]
   },
   {
@@ -108,13 +120,11 @@
    "id": "22155736",
    "metadata": {},
    "source": [
-    "## Part one: Create the dataset\n",
+    "### Data Preparation and Alignment\n",
     "\n",
     "In this section, we create a standard Hugging Face dataset from the CSV files: `data/manzoni_dev_tokens.csv` and `data/manzoni_train_tokens.csv`.\n",
     "\n",
     "The output will be available at [fax4ever/manzoni-192](https://huggingface.co/datasets/fax4ever/manzoni-192).\n",
-    "\n",
-    "## Our first hyperparameter\n",
     "\n",
     "The original CSV files contain text that must be split into portions that can be passed to the encoder model. Typically, the maximum number of tokens for encoder models is 512 (e.g., BERT).\n",
     "Since each word can produce one or more tokens, a simple strategy would be to split texts to use the maximum number of tokens. This is not always optimal.\n",
@@ -176,7 +186,9 @@
     "    'train': train_dataset,\n",
     "    'validation': validation_dataset  # Using 'validation' as the standard name\n",
     "})\n",
-    "dataset_dict.push_to_hub(f\"fax4ever/manzoni-{SIZE}\", token=os.getenv(\"HF_TOKEN\"))"
+    "\n",
+    "# Optionally publish the dataset to the hub\n",
+    "# dataset_dict.push_to_hub(f\"fax4ever/manzoni-{SIZE}\", token=os.getenv(\"HF_TOKEN\"))"
    ]
   },
   {
@@ -202,8 +214,6 @@
    "id": "d9e4cce7",
    "metadata": {},
    "source": [
-    "## Part two: Tokenize the dataset\n",
-    "\n",
     "During tokenization, each word in an input may become one or more tokens.\n",
     "First, define some constants to reflect the convention in the CSV files. A label of 1 denotes the end (and thus beginning of a new sentence); 0 is used otherwise. Special tokens denoting start and end of sequences are labeled with 0."
    ]
@@ -317,7 +327,7 @@
    "id": "0741f4c7",
    "metadata": {},
    "source": [
-    "## Part three: Training\n",
+    "### Training\n",
     "\n",
     "The dataset is highly imbalanced: most labels are 0 and few are 1. Accuracy is not a suitable metric here—for example, predicting only 0 yields high accuracy.\n",
     "\n",
@@ -342,8 +352,9 @@
     "    learning_rate=2e-5,\n",
     "    num_train_epochs=30,\n",
     "    weight_decay=0.01,\n",
-    "    push_to_hub=True,\n",
-    "    hub_token=os.environ['HF_TOKEN'],\n",
+    "    # Optionally, push to the hub the fine-tuned model\n",
+    "    # push_to_hub=True,\n",
+    "    # hub_token=os.environ['HF_TOKEN'],\n",
     "    load_best_model_at_end=True, # Stop training when F1 stops improving\n",
     "    metric_for_best_model=\"f1\" # Of course on the validation set\n",
     ")"
@@ -462,7 +473,13 @@
    "id": "bc855b8f",
    "metadata": {},
    "source": [
-    "## Part four: Inference\n",
+    "### Inference\n",
+    "\n",
+    "Here just a basic test. For more complete inference examples, please see the inference notebooks:\n",
+    "\n",
+    "1. colabs/sentence_splitter_out_of_domain_eval_discriminative.ipynb\n",
+    "2. colabs/sentence_splitter_out_of_domain_test_discriminative.ipynb\n",
+    "3. colabs/sentence_splitter_out_of_domain_test_generative.ipynb\n",
     "\n",
     "Define an inference pipeline using the model deployed on the Hub."
    ]
