--- a/sentence_splitter/colabs/sentence_splitter_generative_training.ipynb
+++ b/sentence_splitter/colabs/sentence_splitter_generative_training.ipynb
@@ -5,9 +5,21 @@
    "id": "b26351d9",
    "metadata": {},
    "source": [
-    "# Sentence splitter using an LLM\n",
+    "# Sentence Splitter: Training\n",
     "\n",
-    "Install the required libraries in your virtual environment:"
+    "## Generative LLMs Fine Tuning\n",
+    "\n",
+    "In this notebook, we're going fine-tune different (actually 5) generative LLMs for sentence splitting,\n",
+    "using the train and the validation sets provided by the homework assignment."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5a3e930e",
+   "metadata": {},
+   "source": [
+    "Install the libraries in the local virtual environment. \n",
+    "We use specific versions to enforce reproducibility for this notebook."
    ]
   },
   {
@@ -18,7 +30,7 @@
    "outputs": [],
    "source": [
     "!pip install --upgrade pip\n",
-    "!pip install torch numpy pandas datasets jupyter unsloth"
+    "!pip install torch==2.7.0 numpy==2.3.2 pandas==2.3.2 datasets==3.6.0 jupyter==1.1.1 unsloth==2025.9.1"
    ]
   },
   {
@@ -26,8 +38,7 @@
    "id": "a41fdfa7",
    "metadata": {},
    "source": [
-    "Import all required libraries.\n",
-    "\n",
+    "Import all required libraries for the training. \n",
     "We do this first to fail fast in case additional packages need to be installed in the virtual environment."
    ]
   },
@@ -54,9 +65,9 @@
    "id": "d1ef295e",
    "metadata": {},
    "source": [
-    "Verify that a hardware accelerator is available.\n",
+    "Optionally (not required to run the notebook). If you want to push the fine-tuned model to the registry, you need to set the token.\n",
     "\n",
-    "This notebook requires a GPU."
+    "Verify that a hardware accelerator is available. This notebook requires a GPU."
    ]
   },
   {
@@ -66,7 +77,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "os.environ['HF_TOKEN'] = 'PUT_YOUR_TOKEN_HERE'\n",
+    "# os.environ['HF_TOKEN'] = 'PUT_YOUR_TOKEN_HERE'\n",
+    "\n",
     "torch.cuda.is_available()"
    ]
   },
@@ -75,7 +87,7 @@
    "id": "ced9aa7a",
    "metadata": {},
    "source": [
-    "Before proceeding, make the run as deterministic as possible:"
+    "Set up deterministic behavior for reproducible results by configuring random seeds for all relevant libraries:"
    ]
   },
   {
@@ -107,7 +119,7 @@
    "id": "35fef26b",
    "metadata": {},
    "source": [
-    "## Part one: Create the dataset\n",
+    "### Data Preparation and Aligment\n",
     "\n",
     "For the LLM portion of the project, start from the dataset already created for the embedding model: [fax4ever/manzoni-192](https://huggingface.co/datasets/fax4ever/manzoni-192).\n",
     "\n",
@@ -162,7 +174,9 @@
     "\n",
     "dataset_dict = load_dataset(f\"fax4ever/manzoni-{SIZE}\")\n",
     "llm_dataset_dict = dataset_dict.map(create_conversations, batched = True)\n",
-    "llm_dataset_dict.push_to_hub(f\"fax4ever/llm-manzoni-{SIZE}\", token=os.getenv(\"HF_TOKEN\"))"
+    "\n",
+    "# optionally push it to the hub --- passing the token\n",
+    "# llm_dataset_dict.push_to_hub(f\"fax4ever/llm-manzoni-{SIZE}\", token=os.getenv(\"HF_TOKEN\"))"
    ]
   },
   {
@@ -192,8 +206,6 @@
    "id": "bc8d0810",
    "metadata": {},
    "source": [
-    "## Part two: Create the prompts\n",
-    "\n",
     "In this phase we create prompts from the question/answer pairs in the dataset.\n",
     "Following an object-oriented approach, we define a class to produce each prompt:"
    ]
@@ -263,10 +275,19 @@
    "id": "008379c9",
    "metadata": {},
    "source": [
-    "## Part three: Parameter‑efficient fine‑tuning\n",
+    "### Training\n",
     "\n",
     "We define a quantized model and then apply a LoRA (Low‑Rank Adaptation) adapter\n",
-    "to enable fine‑tuning the LLM with modest resources."
+    "to enable fine‑tuning the LLM with modest resources.\n",
+    "\n",
+    "Those are the model we fine-tuned:\n",
+    "\n",
+    "| Base LLM                                            | Fine-tuned model                                                                                                                                                        |\n",
+    "|-----------------------------------------------------|-------------------------------------------------------------------------------------------------------------------------------------------------------------------------|\n",
+    "| unsloth/Qwen3-4B                                    | [fax4ever/qwen3-4b-unsloth-bnb-4bit-sentence-splitter](https://huggingface.co/fax4ever/qwen3-4b-unsloth-bnb-4bit-sentence-splitter)                                     |\n",
+    "| unsloth/meta-llama-3.1-8b-instruct-unsloth-bnb-4bit | [fax4ever/meta-llama-3.1-8b-instruct-unsloth-bnb-4bit-sentence-splitter](https://huggingface.co/fax4ever/meta-llama-3.1-8b-instruct-unsloth-bnb-4bit-sentence-splitter) |\n",
+    "| unsloth/mistral-7b-instruct-v0.3-bnb-4bit           | [fax4ever/mistral-7b-instruct-v0.3-bnb-4bit-sentence-splitter](https://huggingface.co/fax4ever/mistral-7b-instruct-v0.3-bnb-4bit-sentence-splitter)                     |\n",
+    "| sapienzanlp/Minerva-7B-instruct-v1.0                | [fax4ever/Minerva-7B-instruct-v1.0-sentence-splitter](https://huggingface.co/fax4ever/Minerva-7B-instruct-v1.0-sentence-splitter)                                       |"
    ]
   },
   {
@@ -328,7 +349,7 @@
     "\n",
     "validation_formatted_chats = pd.Series(chat_dataset['validation']['formatted_chat'])\n",
     "validation_formatted_chats.name = \"text\"\n",
-    "validation_dataset = Dataset.from_pandas(pd.DataFrame(train_formatted_chats))"
+    "validation_dataset = Dataset.from_pandas(pd.DataFrame(validation_formatted_chats))"
    ]
   },
   {
@@ -396,7 +417,13 @@
    "id": "32089c83",
    "metadata": {},
    "source": [
-    "## Part four: Inference"
+    "### Inference\n",
+    "\n",
+    "Here just a basic test. For more complete inference examples, please see the inference notebooks:\n",
+    "\n",
+    "1. colabs/sentence_splitter_out_of_domain_eval_discriminative.ipynb\n",
+    "2. colabs/sentence_splitter_out_of_domain_test_discriminative.ipynb\n",
+    "3. colabs/sentence_splitter_out_of_domain_test_generative.ipynb"
    ]
   },
   {
