--- a/sentence_splitter/colabs/sentence_splitter_out_of_domain_eval_discriminative.ipynb
+++ b/sentence_splitter/colabs/sentence_splitter_out_of_domain_eval_discriminative.ipynb
@@ -7,12 +7,20 @@
    "source": [
     "# Sentence Splitter: Out of Domain Evaluation\n",
     "\n",
+    "## Evaluation Set Inference Using Generative Models\n",
+    "\n",
     "In this notebook we will evaluate the models we produced for sentence splitting,\n",
     "on the same domain (Quarantana - Manzoni) and out of domain (on novels from different authors of the same time).\n",
-    "We copied and slightly adapted the golden splitting novels from [Sentence Splitting Manzoni annotated dataset](https://github.com/RacheleSprugnoli/Sentence_Splitting_Manzoni/tree/main/test-novels).\n",
-    "\n",
-    "\n",
-    "Install the required libraries in your virtual environment:"
+    "We copied and slightly adapted the golden splitting novels from [Sentence Splitting Manzoni annotated dataset](https://github.com/RacheleSprugnoli/Sentence_Splitting_Manzoni/tree/main/test-novels)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "eb4c3973",
+   "metadata": {},
+   "source": [
+    "Install the libraries in the local virtual environment. \n",
+    "We use specific versions to enforce reproducibility for this notebook."
    ]
   },
   {
@@ -74,7 +82,8 @@
    "id": "58fe62fc",
    "metadata": {},
    "source": [
-    "Import all libraries that we will use."
+    "Import the necessary libraries for model inference, data processing, and evaluation.\n",
+    "We do this first to fail fast in case additional packages need to be installed in the virtual environment."
    ]
   },
   {
@@ -106,7 +115,7 @@
    "id": "29e8e03e",
    "metadata": {},
    "source": [
-    "Before proceeding, make the run as deterministic as possible:"
+    "Set up deterministic behavior for reproducible results by configuring random seeds for all relevant libraries:"
    ]
   },
   {
@@ -161,6 +170,8 @@
    "id": "67c1c14c",
    "metadata": {},
    "source": [
+    "### Data Preparation and Alignment\n",
+    "\n",
     "We want to evaluate the f1 score of the splitting prediction compared.\n",
     "\n",
     "First of all, from a prediction and from a golden-annotated novel fragment we want to produce label.\n",
@@ -221,6 +232,8 @@
    "id": "7694a560",
    "metadata": {},
    "source": [
+    "### Model Inference and Evaluation\n",
+    "\n",
     "The golden-annotated novel is grouped in chunk of equal size of lines.\n",
     "\n",
     "From each chunk we evaluate the f1, comparing the labels generated from the golden annotated chunk,\n",
