--- a/sentence_splitter/colabs/sentence_splitter_out_of_domain_test_discriminative.ipynb
+++ b/sentence_splitter/colabs/sentence_splitter_out_of_domain_test_discriminative.ipynb
@@ -19,9 +19,8 @@
    "id": "75b39ce6",
    "metadata": {},
    "source": [
-    "## Setup and Installation\n",
-    "\n",
-    "Install the libraries in the local virtual environment. We use specific versions to enforce maximum reproducibility for this notebook."
+    "Install the libraries in the local virtual environment. \n",
+    "We use specific versions to enforce reproducibility for this notebook."
    ]
   },
   {
@@ -130,9 +129,8 @@
    "id": "a18d51c1",
    "metadata": {},
    "source": [
-    "## Import Libraries\n",
-    "\n",
-    "Import the necessary libraries for model inference, data processing, and evaluation."
+    "Import the necessary libraries for model inference, data processing, and evaluation.\n",
+    "We do this first to fail fast in case additional packages need to be installed in the virtual environment."
    ]
   },
   {
@@ -166,8 +164,6 @@
    "id": "f11277ae",
    "metadata": {},
    "source": [
-    "## Reproducibility Setup\n",
-    "\n",
     "Set up deterministic behavior for reproducible results by configuring random seeds for all relevant libraries:"
    ]
   },
@@ -198,7 +194,7 @@
    "id": "816fbf6f",
    "metadata": {},
    "source": [
-    "## Data Preparation\n",
+    "### Data Preparation and Alignment\n",
     "\n",
     "Load the test set and group words into sequences.\n",
     "\n",
@@ -3414,8 +3410,6 @@
    "id": "2a6d0242",
    "metadata": {},
    "source": [
-    "## Dataset Creation\n",
-    "\n",
     "Create a dataset from the grouped sequences so it can be reused."
    ]
   },
@@ -3454,7 +3448,7 @@
    "id": "0dabe7c4",
    "metadata": {},
    "source": [
-    "## Model Loading\n",
+    "### Model Inference and Evaluation\n",
     "\n",
     "Create two inference pipelines for the models that performed best in another notebook (`colabs/sentence_splitter_out_of_domain_eval_discriminative.ipynb`) in which we used a dataset found on the web (and not the test dataset) to choose Modern BERT ITA XXL and Electra ITA XXL as best base models."
    ]
@@ -3489,8 +3483,6 @@
    "id": "6df26c8d",
    "metadata": {},
    "source": [
-    "## Model Inference and Evaluation\n",
-    "\n",
     "Compute the predicted labels.\n",
     "\n",
     "The model produces a label for each token. Using the \"simple\" aggregation strategy, contiguous tokens with the same label are grouped into a single entity. We then split those strings into words (by removing whitespace). Finally, we align those words (and their labels) with the words provided by the gold dataset.\n",
@@ -3639,7 +3631,7 @@
    "id": "a89125bf",
    "metadata": {},
    "source": [
-    "## Results Export\n",
+    "### Results Export\n",
     "\n",
     "Finally, export the inference results to CSV files for further analysis and comparison with other models."
    ]
@@ -3674,8 +3666,6 @@
    "id": "de9caf22",
    "metadata": {},
    "source": [
-    "## Conclusion\n",
-    "\n",
     "The results from this notebook will be used to analyze common prediction errors and model performance patterns. Detailed analysis and insights can be found in the accompanying research report."
    ]
   }
