--- a/sentence_splitter/colabs/sentence_splitter_out_of_domain_test_generative.ipynb
+++ b/sentence_splitter/colabs/sentence_splitter_out_of_domain_test_generative.ipynb
@@ -19,8 +19,8 @@
    "id": "310e3a31",
    "metadata": {},
    "source": [
-    "Install the libraries in the local virtual environment.\n",
-    "We use specific versions to enforce maximum reproducibility for this notebook."
+    "Install the libraries in the local virtual environment. \n",
+    "We use specific versions to enforce reproducibility for this notebook."
    ]
   },
   {
@@ -441,7 +441,8 @@
    "id": "cda69806",
    "metadata": {},
    "source": [
-    "Import the necessary libraries for model inference, data processing, and evaluation."
+    "Import the necessary libraries for model inference, data processing, and evaluation.\n",
+    "We do this first to fail fast in case additional packages need to be installed in the virtual environment."
    ]
   },
   {
@@ -507,6 +508,8 @@
    "id": "0da81171",
    "metadata": {},
    "source": [
+    "### Data Preparation and Aligment\n",
+    "\n",
     "Define the `Prompt` class (reused from the training notebook) to format input text for the LLM.\n",
     "For inference, we only use the `question` method to generate prompts without expected outputs."
    ]
@@ -879,6 +882,8 @@
    "id": "23635c80",
    "metadata": {},
    "source": [
+    "### Model Inference and Evaluation\n",
+    "\n",
     "Producing sentence splitting labels from an LLM is not a trivial task according to our analysis.\n",
     "We created a utility class to produce labels for the test set words using the LLM output.\n",
     "\n",
@@ -896,17 +901,17 @@
     "`trasfigurito` appears to be an alternative way of saying `trasfigurato`, see https://www.treccani.it/vocabolario/ricerca/trasfigurito/.\n",
     "\n",
     "We can consider these as minor hallucinations that we want to tolerate.\n",
-    "Other hallucinations will produce an `AllucinationException` that will be logged to the system."
+    "Other hallucinations will produce an `HallucinationException` that will be logged to the system."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "77ec021b",
    "metadata": {},
    "outputs": [],
    "source": [
-    "class AllucinationException(Exception):\n",
+    "class HallucinationException(Exception):\n",
     "    def __init__(self, message):\n",
     "        self.message = message\n",
     "        super().__init__(self.message)"
@@ -914,7 +919,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "24ae1a6d",
    "metadata": {},
    "outputs": [],
@@ -926,7 +931,7 @@
     "    self.minerva_output = minerva_output\n",
     "    self.sentences = self._create_sentences()\n",
     "    self.aligned_sentences = self._aligned_sentences()\n",
-    "    self._check_alinged_sentences() # Sanity check\n",
+    "    self._check_aligned_sentences() # Sanity check\n",
     "\n",
     "  def _create_sentences(self):\n",
     "    import re\n",
@@ -953,13 +958,13 @@
     "      return sentence\n",
     "    else:\n",
     "      # in this case the model is hallucinating altering a sentence or producing a sentence that does not exist\n",
-    "      raise AllucinationException(f\"Sentence {sentence} not found in {self.words_joined}\")\n",
+    "      raise HallucinationException(f\"Sentence {sentence} not found in {self.words_joined}\")\n",
     "\n",
-    "  def _check_alinged_sentences(self):\n",
+    "  def _check_aligned_sentences(self):\n",
     "    aligned_join = \"\".join(self.aligned_sentences)\n",
     "    if not aligned_join == self.words_joined:\n",
     "      # in this case the model is hallucinating not producing a sentence passed in input\n",
-    "      raise AllucinationException(f\"Aligned sentences {self.aligned_sentences} do not match words {self.words_joined}\")\n",
+    "      raise HallucinationException(f\"Aligned sentences {self.aligned_sentences} do not match words {self.words_joined}\")\n",
     "\n",
     "  def aligned_labels(self, golden_labels):\n",
     "    labels = [0] * len(self.words)\n",
@@ -1024,7 +1029,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "29a2231e",
    "metadata": {},
    "outputs": [
@@ -1185,8 +1190,8 @@
     "\n",
     "    try:\n",
     "        minerva_labels_helper = MinervaLabels(minerva_output, words)\n",
-    "    except AllucinationException as e:\n",
-    "        print(\"Allucination:\", e)\n",
+    "    except HallucinationException as e:\n",
+    "        print(\"Hallucination:\", e)\n",
     "        all_words.extend(words)\n",
     "        all_golden_labels.extend(golden_labels)\n",
     "        # In this case we will put all zeros as produced labels,\n",
@@ -1215,6 +1220,8 @@
    "id": "5a69e721",
    "metadata": {},
    "source": [
+    "### Results Export\n",
+    "\n",
     "Finally, export the inference results to a CSV file for further analysis and comparison with other models."
    ]
   },
