--- a/sentence_splitter/colabs/sentence_splitter_out_of_domain_eval_discriminative.ipynb
+++ b/sentence_splitter/colabs/sentence_splitter_out_of_domain_eval_discriminative.ipynb
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "2c58f4e8",
    "metadata": {},
    "outputs": [
@@ -36,39 +36,86 @@
       "Defaulting to user installation because normal site-packages is not writeable\n",
       "Requirement already satisfied: pip in /home/fax/.local/lib/python3.13/site-packages (25.2)\n",
       "Defaulting to user installation because normal site-packages is not writeable\n",
-      "Requirement already satisfied: transformers in /home/fax/.local/lib/python3.13/site-packages (4.53.3)\n",
-      "Requirement already satisfied: evaluate in /home/fax/.local/lib/python3.13/site-packages (0.4.5)\n",
-      "Requirement already satisfied: filelock in /usr/lib/python3.13/site-packages (from transformers) (3.15.4)\n",
-      "Requirement already satisfied: huggingface-hub<1.0,>=0.30.0 in /home/fax/.local/lib/python3.13/site-packages (from transformers) (0.30.2)\n",
-      "Requirement already satisfied: numpy>=1.17 in /usr/lib64/python3.13/site-packages (from transformers) (2.2.6)\n",
-      "Requirement already satisfied: packaging>=20.0 in /usr/lib/python3.13/site-packages (from transformers) (24.2)\n",
-      "Requirement already satisfied: pyyaml>=5.1 in /usr/lib64/python3.13/site-packages (from transformers) (6.0.2)\n",
-      "Requirement already satisfied: regex!=2019.12.17 in /usr/lib64/python3.13/site-packages (from transformers) (2024.11.6)\n",
-      "Requirement already satisfied: requests in /usr/lib/python3.13/site-packages (from transformers) (2.32.4)\n",
-      "Requirement already satisfied: tokenizers<0.22,>=0.21 in /home/fax/.local/lib/python3.13/site-packages (from transformers) (0.21.2)\n",
-      "Requirement already satisfied: safetensors>=0.4.3 in /home/fax/.local/lib/python3.13/site-packages (from transformers) (0.5.3)\n",
-      "Requirement already satisfied: tqdm>=4.27 in /usr/lib/python3.13/site-packages (from transformers) (4.67.1)\n",
-      "Requirement already satisfied: fsspec>=2023.5.0 in /home/fax/.local/lib/python3.13/site-packages (from huggingface-hub<1.0,>=0.30.0->transformers) (2025.3.0)\n",
-      "Requirement already satisfied: typing-extensions>=3.7.4.3 in /usr/lib/python3.13/site-packages (from huggingface-hub<1.0,>=0.30.0->transformers) (4.12.2)\n",
-      "Requirement already satisfied: datasets>=2.0.0 in /home/fax/.local/lib/python3.13/site-packages (from evaluate) (3.5.1)\n",
-      "Requirement already satisfied: dill in /home/fax/.local/lib/python3.13/site-packages (from evaluate) (0.3.8)\n",
-      "Requirement already satisfied: pandas in /usr/lib64/python3.13/site-packages (from evaluate) (2.2.3)\n",
-      "Requirement already satisfied: xxhash in /home/fax/.local/lib/python3.13/site-packages (from evaluate) (3.5.0)\n",
-      "Requirement already satisfied: multiprocess in /home/fax/.local/lib/python3.13/site-packages (from evaluate) (0.70.16)\n",
-      "Requirement already satisfied: pyarrow>=15.0.0 in /usr/lib64/python3.13/site-packages (from datasets>=2.0.0->evaluate) (18.0.0)\n",
-      "Requirement already satisfied: aiohttp in /usr/lib64/python3.13/site-packages (from datasets>=2.0.0->evaluate) (3.10.11)\n",
-      "Requirement already satisfied: aiohappyeyeballs>=2.3.0 in /usr/lib/python3.13/site-packages (from aiohttp->datasets>=2.0.0->evaluate) (2.4.4)\n",
-      "Requirement already satisfied: aiosignal>=1.1.2 in /usr/lib/python3.13/site-packages (from aiohttp->datasets>=2.0.0->evaluate) (1.4.0)\n",
-      "Requirement already satisfied: attrs>=17.3.0 in /usr/lib/python3.13/site-packages (from aiohttp->datasets>=2.0.0->evaluate) (25.1.0)\n",
-      "Requirement already satisfied: frozenlist>=1.1.1 in /usr/lib64/python3.13/site-packages (from aiohttp->datasets>=2.0.0->evaluate) (1.5.0)\n",
-      "Requirement already satisfied: multidict<7.0,>=4.5 in /usr/lib64/python3.13/site-packages (from aiohttp->datasets>=2.0.0->evaluate) (6.1.0)\n",
-      "Requirement already satisfied: yarl<2.0,>=1.12.0 in /usr/lib64/python3.13/site-packages (from aiohttp->datasets>=2.0.0->evaluate) (1.13.1)\n",
-      "Requirement already satisfied: idna>=2.0 in /usr/lib/python3.13/site-packages (from yarl<2.0,>=1.12.0->aiohttp->datasets>=2.0.0->evaluate) (3.10)\n",
-      "Requirement already satisfied: charset-normalizer<4,>=2 in /usr/lib/python3.13/site-packages (from requests->transformers) (3.4.1)\n",
-      "Requirement already satisfied: urllib3<3,>=1.21.1 in /usr/lib/python3.13/site-packages (from requests->transformers) (2.3.0)\n",
-      "Requirement already satisfied: python-dateutil>=2.8.2 in /usr/lib/python3.13/site-packages (from pandas->evaluate) (2.8.2)\n",
-      "Requirement already satisfied: pytz>=2020.1 in /usr/lib/python3.13/site-packages (from pandas->evaluate) (2025.2)\n",
-      "Requirement already satisfied: six>=1.5 in /usr/lib/python3.13/site-packages (from python-dateutil>=2.8.2->pandas->evaluate) (1.17.0)\n"
+      "Requirement already satisfied: transformers==4.56.1 in /home/fax/.local/lib/python3.13/site-packages (4.56.1)\n",
+      "Requirement already satisfied: evaluate==0.4.5 in /home/fax/.local/lib/python3.13/site-packages (0.4.5)\n",
+      "Requirement already satisfied: torch==2.7.0 in /home/fax/.local/lib/python3.13/site-packages (2.7.0)\n",
+      "Requirement already satisfied: ipywidgets==8.1.7 in /home/fax/.local/lib/python3.13/site-packages (8.1.7)\n",
+      "Requirement already satisfied: scikit-learn==1.7.1 in /home/fax/.local/lib/python3.13/site-packages (1.7.1)\n",
+      "Requirement already satisfied: filelock in /usr/lib/python3.13/site-packages (from transformers==4.56.1) (3.15.4)\n",
+      "Requirement already satisfied: huggingface-hub<1.0,>=0.34.0 in /home/fax/.local/lib/python3.13/site-packages (from transformers==4.56.1) (0.34.4)\n",
+      "Requirement already satisfied: numpy>=1.17 in /usr/lib64/python3.13/site-packages (from transformers==4.56.1) (2.2.6)\n",
+      "Requirement already satisfied: packaging>=20.0 in /usr/lib/python3.13/site-packages (from transformers==4.56.1) (24.2)\n",
+      "Requirement already satisfied: pyyaml>=5.1 in /usr/lib64/python3.13/site-packages (from transformers==4.56.1) (6.0.2)\n",
+      "Requirement already satisfied: regex!=2019.12.17 in /usr/lib64/python3.13/site-packages (from transformers==4.56.1) (2024.11.6)\n",
+      "Requirement already satisfied: requests in /usr/lib/python3.13/site-packages (from transformers==4.56.1) (2.32.4)\n",
+      "Requirement already satisfied: tokenizers<=0.23.0,>=0.22.0 in /home/fax/.local/lib/python3.13/site-packages (from transformers==4.56.1) (0.22.0)\n",
+      "Requirement already satisfied: safetensors>=0.4.3 in /home/fax/.local/lib/python3.13/site-packages (from transformers==4.56.1) (0.5.3)\n",
+      "Requirement already satisfied: tqdm>=4.27 in /usr/lib/python3.13/site-packages (from transformers==4.56.1) (4.67.1)\n",
+      "Requirement already satisfied: datasets>=2.0.0 in /home/fax/.local/lib/python3.13/site-packages (from evaluate==0.4.5) (3.5.1)\n",
+      "Requirement already satisfied: dill in /home/fax/.local/lib/python3.13/site-packages (from evaluate==0.4.5) (0.3.8)\n",
+      "Requirement already satisfied: pandas in /usr/lib64/python3.13/site-packages (from evaluate==0.4.5) (2.2.3)\n",
+      "Requirement already satisfied: xxhash in /home/fax/.local/lib/python3.13/site-packages (from evaluate==0.4.5) (3.5.0)\n",
+      "Requirement already satisfied: multiprocess in /home/fax/.local/lib/python3.13/site-packages (from evaluate==0.4.5) (0.70.16)\n",
+      "Requirement already satisfied: fsspec>=2021.05.0 in /home/fax/.local/lib/python3.13/site-packages (from fsspec[http]>=2021.05.0->evaluate==0.4.5) (2025.3.0)\n",
+      "Requirement already satisfied: typing-extensions>=4.10.0 in /home/fax/.local/lib/python3.13/site-packages (from torch==2.7.0) (4.15.0)\n",
+      "Requirement already satisfied: setuptools in /usr/lib/python3.13/site-packages (from torch==2.7.0) (74.1.3)\n",
+      "Requirement already satisfied: sympy>=1.13.3 in /usr/lib/python3.13/site-packages (from torch==2.7.0) (1.14.0)\n",
+      "Requirement already satisfied: networkx in /usr/lib/python3.13/site-packages (from torch==2.7.0) (3.4.2)\n",
+      "Requirement already satisfied: jinja2 in /usr/lib/python3.13/site-packages (from torch==2.7.0) (3.1.6)\n",
+      "Requirement already satisfied: nvidia-cuda-nvrtc-cu12==12.6.77 in /home/fax/.local/lib/python3.13/site-packages (from torch==2.7.0) (12.6.77)\n",
+      "Requirement already satisfied: nvidia-cuda-runtime-cu12==12.6.77 in /home/fax/.local/lib/python3.13/site-packages (from torch==2.7.0) (12.6.77)\n",
+      "Requirement already satisfied: nvidia-cuda-cupti-cu12==12.6.80 in /home/fax/.local/lib/python3.13/site-packages (from torch==2.7.0) (12.6.80)\n",
+      "Requirement already satisfied: nvidia-cudnn-cu12==9.5.1.17 in /home/fax/.local/lib/python3.13/site-packages (from torch==2.7.0) (9.5.1.17)\n",
+      "Requirement already satisfied: nvidia-cublas-cu12==12.6.4.1 in /home/fax/.local/lib/python3.13/site-packages (from torch==2.7.0) (12.6.4.1)\n",
+      "Requirement already satisfied: nvidia-cufft-cu12==11.3.0.4 in /home/fax/.local/lib/python3.13/site-packages (from torch==2.7.0) (11.3.0.4)\n",
+      "Requirement already satisfied: nvidia-curand-cu12==10.3.7.77 in /home/fax/.local/lib/python3.13/site-packages (from torch==2.7.0) (10.3.7.77)\n",
+      "Requirement already satisfied: nvidia-cusolver-cu12==11.7.1.2 in /home/fax/.local/lib/python3.13/site-packages (from torch==2.7.0) (11.7.1.2)\n",
+      "Requirement already satisfied: nvidia-cusparse-cu12==12.5.4.2 in /home/fax/.local/lib/python3.13/site-packages (from torch==2.7.0) (12.5.4.2)\n",
+      "Requirement already satisfied: nvidia-cusparselt-cu12==0.6.3 in /home/fax/.local/lib/python3.13/site-packages (from torch==2.7.0) (0.6.3)\n",
+      "Requirement already satisfied: nvidia-nccl-cu12==2.26.2 in /home/fax/.local/lib/python3.13/site-packages (from torch==2.7.0) (2.26.2)\n",
+      "Requirement already satisfied: nvidia-nvtx-cu12==12.6.77 in /home/fax/.local/lib/python3.13/site-packages (from torch==2.7.0) (12.6.77)\n",
+      "Requirement already satisfied: nvidia-nvjitlink-cu12==12.6.85 in /home/fax/.local/lib/python3.13/site-packages (from torch==2.7.0) (12.6.85)\n",
+      "Requirement already satisfied: nvidia-cufile-cu12==1.11.1.6 in /home/fax/.local/lib/python3.13/site-packages (from torch==2.7.0) (1.11.1.6)\n",
+      "Requirement already satisfied: triton==3.3.0 in /home/fax/.local/lib/python3.13/site-packages (from torch==2.7.0) (3.3.0)\n",
+      "Requirement already satisfied: comm>=0.1.3 in /usr/lib/python3.13/site-packages (from ipywidgets==8.1.7) (0.2.2)\n",
+      "Requirement already satisfied: ipython>=6.1.0 in /usr/lib/python3.13/site-packages (from ipywidgets==8.1.7) (8.36.0)\n",
+      "Requirement already satisfied: traitlets>=4.3.1 in /usr/lib/python3.13/site-packages (from ipywidgets==8.1.7) (5.14.3)\n",
+      "Requirement already satisfied: widgetsnbextension~=4.0.14 in /home/fax/.local/lib/python3.13/site-packages (from ipywidgets==8.1.7) (4.0.14)\n",
+      "Requirement already satisfied: jupyterlab_widgets~=3.0.15 in /home/fax/.local/lib/python3.13/site-packages (from ipywidgets==8.1.7) (3.0.15)\n",
+      "Requirement already satisfied: scipy>=1.8.0 in /usr/lib64/python3.13/site-packages (from scikit-learn==1.7.1) (1.14.1)\n",
+      "Requirement already satisfied: joblib>=1.2.0 in /usr/lib/python3.13/site-packages (from scikit-learn==1.7.1) (1.4.2)\n",
+      "Requirement already satisfied: threadpoolctl>=3.1.0 in /usr/lib/python3.13/site-packages (from scikit-learn==1.7.1) (3.5.0)\n",
+      "Requirement already satisfied: hf-xet<2.0.0,>=1.1.3 in /home/fax/.local/lib/python3.13/site-packages (from huggingface-hub<1.0,>=0.34.0->transformers==4.56.1) (1.1.9)\n",
+      "Requirement already satisfied: pyarrow>=15.0.0 in /usr/lib64/python3.13/site-packages (from datasets>=2.0.0->evaluate==0.4.5) (18.0.0)\n",
+      "Requirement already satisfied: aiohttp in /usr/lib64/python3.13/site-packages (from datasets>=2.0.0->evaluate==0.4.5) (3.10.11)\n",
+      "Requirement already satisfied: aiohappyeyeballs>=2.3.0 in /usr/lib/python3.13/site-packages (from aiohttp->datasets>=2.0.0->evaluate==0.4.5) (2.4.4)\n",
+      "Requirement already satisfied: aiosignal>=1.1.2 in /usr/lib/python3.13/site-packages (from aiohttp->datasets>=2.0.0->evaluate==0.4.5) (1.4.0)\n",
+      "Requirement already satisfied: attrs>=17.3.0 in /usr/lib/python3.13/site-packages (from aiohttp->datasets>=2.0.0->evaluate==0.4.5) (25.1.0)\n",
+      "Requirement already satisfied: frozenlist>=1.1.1 in /usr/lib64/python3.13/site-packages (from aiohttp->datasets>=2.0.0->evaluate==0.4.5) (1.5.0)\n",
+      "Requirement already satisfied: multidict<7.0,>=4.5 in /usr/lib64/python3.13/site-packages (from aiohttp->datasets>=2.0.0->evaluate==0.4.5) (6.1.0)\n",
+      "Requirement already satisfied: yarl<2.0,>=1.12.0 in /usr/lib64/python3.13/site-packages (from aiohttp->datasets>=2.0.0->evaluate==0.4.5) (1.13.1)\n",
+      "Requirement already satisfied: idna>=2.0 in /usr/lib/python3.13/site-packages (from yarl<2.0,>=1.12.0->aiohttp->datasets>=2.0.0->evaluate==0.4.5) (3.10)\n",
+      "Requirement already satisfied: decorator in /usr/lib/python3.13/site-packages (from ipython>=6.1.0->ipywidgets==8.1.7) (5.1.1)\n",
+      "Requirement already satisfied: jedi>=0.16 in /usr/lib/python3.13/site-packages (from ipython>=6.1.0->ipywidgets==8.1.7) (0.19.2)\n",
+      "Requirement already satisfied: matplotlib-inline in /usr/lib/python3.13/site-packages (from ipython>=6.1.0->ipywidgets==8.1.7) (0.1.7)\n",
+      "Requirement already satisfied: pexpect>4.3 in /usr/lib/python3.13/site-packages (from ipython>=6.1.0->ipywidgets==8.1.7) (4.9.0)\n",
+      "Requirement already satisfied: prompt_toolkit<3.1.0,>=3.0.41 in /usr/lib/python3.13/site-packages (from ipython>=6.1.0->ipywidgets==8.1.7) (3.0.41)\n",
+      "Requirement already satisfied: pygments>=2.4.0 in /usr/lib/python3.13/site-packages (from ipython>=6.1.0->ipywidgets==8.1.7) (2.18.0)\n",
+      "Requirement already satisfied: stack_data in /usr/lib/python3.13/site-packages (from ipython>=6.1.0->ipywidgets==8.1.7) (0.6.3)\n",
+      "Requirement already satisfied: wcwidth in /usr/lib/python3.13/site-packages (from prompt_toolkit<3.1.0,>=3.0.41->ipython>=6.1.0->ipywidgets==8.1.7) (0.2.13)\n",
+      "Requirement already satisfied: parso<0.9.0,>=0.8.4 in /usr/lib/python3.13/site-packages (from jedi>=0.16->ipython>=6.1.0->ipywidgets==8.1.7) (0.8.4)\n",
+      "Requirement already satisfied: cloudpickle>=2.2.0 in /usr/lib/python3.13/site-packages (from joblib>=1.2.0->scikit-learn==1.7.1) (3.1.1)\n",
+      "Requirement already satisfied: ptyprocess>=0.5 in /usr/lib/python3.13/site-packages (from pexpect>4.3->ipython>=6.1.0->ipywidgets==8.1.7) (0.7.0)\n",
+      "Requirement already satisfied: charset-normalizer<4,>=2 in /usr/lib/python3.13/site-packages (from requests->transformers==4.56.1) (3.4.1)\n",
+      "Requirement already satisfied: urllib3<3,>=1.21.1 in /usr/lib/python3.13/site-packages (from requests->transformers==4.56.1) (2.3.0)\n",
+      "Requirement already satisfied: mpmath<1.4,>=1.1.0 in /usr/lib/python3.13/site-packages (from sympy>=1.13.3->torch==2.7.0) (1.3.0)\n",
+      "Requirement already satisfied: MarkupSafe>=2.0 in /usr/lib64/python3.13/site-packages (from jinja2->torch==2.7.0) (3.0.2)\n",
+      "Requirement already satisfied: python-dateutil>=2.8.2 in /usr/lib/python3.13/site-packages (from pandas->evaluate==0.4.5) (2.8.2)\n",
+      "Requirement already satisfied: pytz>=2020.1 in /usr/lib/python3.13/site-packages (from pandas->evaluate==0.4.5) (2025.2)\n",
+      "Requirement already satisfied: six>=1.5 in /usr/lib/python3.13/site-packages (from python-dateutil>=2.8.2->pandas->evaluate==0.4.5) (1.17.0)\n",
+      "Requirement already satisfied: executing>=1.2.0 in /usr/lib/python3.13/site-packages (from stack_data->ipython>=6.1.0->ipywidgets==8.1.7) (2.2.0)\n",
+      "Requirement already satisfied: asttokens>=2.1.0 in /usr/lib/python3.13/site-packages (from stack_data->ipython>=6.1.0->ipywidgets==8.1.7) (2.4.1)\n",
+      "Requirement already satisfied: pure-eval in /usr/lib/python3.13/site-packages (from stack_data->ipython>=6.1.0->ipywidgets==8.1.7) (0.2.3)\n"
      ]
     }
    ],
